--- a/Objetivos Prioritarios/Objetivos Prioritarios.csproj
+++ b/Objetivos Prioritarios/Objetivos Prioritarios.csproj
@@ -46,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DocumentFormat.OpenXml, Version=3.3.0.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.3.3.0\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
+    </Reference>
+    <Reference Include="DocumentFormat.OpenXml.Framework, Version=3.3.0.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.Framework.3.3.0\lib\net46\DocumentFormat.OpenXml.Framework.dll</HintPath>
+    </Reference>
     <Reference Include="Emby.Media.Model, Version=4.9.1.90, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MediaBrowser.Common.4.9.1.90\lib\netstandard2.0\Emby.Media.Model.dll</HintPath>
     </Reference>
@@ -138,6 +144,7 @@
       <Private>True</Private>
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
@@ -154,6 +161,7 @@
     <Compile Include="ControllersServices\CatalogoService.cs" />
     <Compile Include="ControllersServices\FichaObjetivoService.cs" />
     <Compile Include="ControllersServices\ObjetivoService.cs" />
+    <Compile Include="ControllersServices\ReporteService.cs" />
     <Compile Include="Controllers\ABaseController.cs" />
     <Compile Include="Controllers\AsuntosController.cs" />
     <Compile Include="Controllers\CatalogoController.cs" />
@@ -233,6 +241,9 @@
     <Compile Include="Models\getListObjetivosRelacionadoAsunto_Result.cs">
       <DependentUpon>ObjetivosPrioritarios.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\getListObjetivosRelacionadoGrupo_Result.cs">
+      <DependentUpon>ObjetivosPrioritarios.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\getListVictimasByNombre_Result.cs">
       <DependentUpon>ObjetivosPrioritarios.tt</DependentUpon>
     </Compile>
@@ -308,6 +319,12 @@
     <Compile Include="Models\sp_ObjPri_getObjetivoInfo_Result.cs">
       <DependentUpon>Mandamientos.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\tb_AlbumFichaObjetivo.cs">
+      <DependentUpon>ObjetivosPrioritarios.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\tb_AlbumFichaObjetivoDetalle.cs">
+      <DependentUpon>ObjetivosPrioritarios.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\tb_AliasObjetivo.cs">
       <DependentUpon>ObjetivosPrioritarios.tt</DependentUpon>
     </Compile>
@@ -361,7 +378,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\BasicOperationResponse.cs" />
+    <Compile Include="Utils\Detenido.cs" />
     <Compile Include="Utils\LoginUser.cs" />
+    <Compile Include="Utils\PowerPointGeneratorNoImagePartType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets2\css\vertical-layout-light\style.css" />
@@ -2536,6 +2555,15 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
+    <Content Include="Content\imagenes\detenido1.jpg" />
+    <Content Include="Content\imagenes\detenido2.jpg" />
+    <Content Include="Content\imagenes\FONDO.jpg" />
+    <Content Include="Content\imagenes\FONDO2.png" />
+    <Content Include="Content\imagenes\no-image.png" />
+    <Content Include="Content\imagenes\Nodisponible.jpg" />
+    <Content Include="Content\imagenes\principal.jpg" />
+    <Content Include="Content\imagenes\victima1.jpg" />
+    <Content Include="Content\imagenes\victima2.jpg" />
     <Content Include="Content\Image\Customer\CustLogo_2.jpg" />
     <Content Include="Content\Image\Customer\CustLogo_6.jpeg" />
     <Content Include="Content\Image\Customer\CustLogo_6.jpg" />
@@ -2964,6 +2992,9 @@
     <Content Include="Models\Filiacion.edmx.diagram">
       <DependentUpon>Filiacion.edmx</DependentUpon>
     </Content>
+    <Content Include="Plantillas\plantilla_base.pptx" />
+    <Content Include="Salidas\informe_detenidos.pptx" />
+    <Content Include="Plantillas\plantilla_base_vicefiscalia.pptx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
@@ -3200,9 +3231,15 @@
     <Content Include="Views\Asuntos\Victimas\AddEditVictimaPartial.cshtml" />
     <Content Include="Views\Objetivo\BusquedaFotosDetenidosListPartial.cshtml" />
     <Content Include="Views\Asuntos\ObjetivoRelacionadoAsuntoListPartial.cshtml" />
+    <Content Include="Views\FichaObjetivo\AlbumFicha\IndexAlbum.cshtml" />
+    <Content Include="Views\FichaObjetivo\AlbumFicha\AlbumFichaListPartial.cshtml" />
+    <Content Include="Views\FichaObjetivo\AlbumFicha\AddEditAlbumFichaPartial.cshtml" />
+    <Content Include="Views\FichaObjetivo\AlbumFichaGrupo\IndexGrupo.cshtml" />
+    <Content Include="Views\FichaObjetivo\AlbumFichaGrupo\GrupoFichasListPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\ReporteService\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
