--- a/Objetivos Prioritarios/packages.config
+++ b/Objetivos Prioritarios/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="3.3.0" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml.Framework" version="3.3.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net48" />
